[tool.poetry]
name = "music-project"
version = "0.1.0"
description = ""
authors = ["Justin Sova <justin.sova@theinformation.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.11.0.86"
mido = "^1.3.3"
mediapipe = "^0.10.20"
python-rtmidi = "^1.5.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
